 Otherwise indicated differently, all changes made by 
     Jelmer Vernooij.

Ctrlproxy 3.0.6 UNRELEASED

  IMPROVEMENTS

    * Add report-time-offset setting.
	
	* New settings ``port'', ``linestack'', ``logging'', ``password'',
	  ``default-network'', ``auto-away-message'', ``auto-away-nick'', 
	  ``auto-away-enable'' and ``auto-away-time''.

	* Simplify files in networks/ further by storing keys in ~/.ctrlproxy/keys 
	  and having a list of channels to autojoin. (#76)

    * Only update autojoin settings when ctrlproxy is completely logged in. 
	  (#113)

    * Increase the debug level at which messages about joins/parts are 
	  logged.

    * Put linestack state data in separate files. This will make it possible 
	  in the future to remove some of the state files.

	* Avoid data overhead when responding to /NAMES out of cache.

	* Add --check-running option.

	* The pid file is now read to check whether another instance of 
	  ctrlproxy is already running.

  BUG FIXES

    * Improve handling of empty pid files. (#186)

  	* Handle out of disk space correctly. (#91)

    * Don't "forget" listener password.

	* Don't add all existing networks to autoconnect list. (#90)

	* Fix a couple of minor memory leaks.

	* Store CTCP ACTIONs for replication.

	* Warn about unknown networks listed for listeners rather than crash.

	* Fixed segfault when no conversion is being used. Patch by Ashish Shukla.

	* Don't use AI_ADDRCONFIG if it's not provided by the system.  (#179)

	* Fix segfault when address type is not reachable at the moment. (#177)
	  Patch by wahjava@gmail.com.

	* Abort startup when one or more listener ports are already in use. 
	  (#175)

	* Fix crash bug when client shuts down correctly. (#176)

	* Allow multi-character prefixes for users in channels.

	* Support EXTBAN parameter in 005 lines.

	* Handle 008 responses.

	* Cache more than just the first result returned in RPL_USERHOST.
